fix leaderboard overflow issue

--- a/frontend/src/components/leaderboard/leaderstyle.scss
+++ b/frontend/src/components/leaderboard/leaderstyle.scss
@@ -117,8 +117,8 @@
   color: white;
 }
 .leaderboardContainerdiv {
-  //   background-image: url("./star2.jpg");
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
+  background-image: url("./star2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
 }
